updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am working in the bank industry but my dream is to become a software developer ...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Atlanta GA.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Some of my favorite hobbies are singing, speaking and eating...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p> My dream job is to become a software developer and a christian speaker</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Douglasvile GA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To create apps and one day have my tech company.</p>
     </section>
 
     <footer id="footer">
